tests/tooling/fixtures/native/execution/positive/message_send_nonzero_bound_identifier_fast_path.objc3
module MessageSendNonzeroBoundIdentifierFastPath;

fn main() -> i32 {
  let receiver = 7;
  return [receiver ping];
}
