tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_message_selector_head_pure.objc3
module MisplacedQualifierMessageSelectorHeadPure;

fn main() -> i32 {
  let receiver = 1;
  return [receiver pure];
}